--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><code>.nojekyll</code> — disables Jekyll processing (so folders work as-is).</li>
       </ul>
       <p><a class="btn" href="lessons/grade3-norse.html">View Sample Lesson</a></p>
+      <p><a class="btn" href="lessons/grade7-taiping.html">View Grade 7: Taiping Rebellion</a></p>
     </section>
 
     <section class="card" id="getting-started">
