--- a/index.html
+++ b/index.html
@@ -53,6 +53,34 @@
       <div class="hr"></div>
       <p class="footer">Prototype v0.1</p>
     </section>
+    <section class="card" id="grade-hub">
+  <h2>Grade Hub</h2>
+  <p class="muted">Add lessons by grade and term as you build out WCED.</p>
+
+  <!-- Grades grid -->
+  <div class="grid" style="grid-template-columns: 1fr; gap: 16px;">
+    <!-- Tip: When you have more content, change to 2 or 3 columns:
+         style="grid-template-columns: repeat(2, 1fr);" or repeat(3, 1fr); -->
+
+    <!-- Grade 3 -->
+    <div class="card">
+      <h3 style="margin-top:0;">Grade 3</h3>
+      <ul>
+        <li><a href="lessons/grade3-norse.html">Norse Navigation (Term 1 • Week 3 • Day 2)</a></li>
+      </ul>
+    </div>
+
+    <!-- Grade 7 -->
+    <div class="card">
+      <h3 style="margin-top:0;">Grade 7</h3>
+      <ul>
+        <li><a href="lessons/grade7-taiping.html">The Taiping Rebellion (Term 3 • Week 24 • Day 5)</a></li>
+      </ul>
+    </div>
+
+    <!-- Example placeholders — copy/paste and update as you add lessons -->
+    <div class="card">
+
   </div>
 </body>
 </html>
