--- a/index.html
+++ b/index.html
@@ -55,28 +55,97 @@
     </section>
     <section class="card" id="grade-hub">
   <h2>Grade Hub</h2>
-  <p class="muted">Add lessons by grade and term as you build out WCED.</p>
+  <p class="muted">Lessons organized by grade and term (Term 1: Europe • Term 2: Africa • Term 3: Asia • Term 4: Americas & “Other”).</p>
 
-  <!-- Grades grid -->
-  <div class="grid" style="grid-template-columns: 1fr; gap: 16px;">
-    <!-- Tip: When you have more content, change to 2 or 3 columns:
-         style="grid-template-columns: repeat(2, 1fr);" or repeat(3, 1fr); -->
+  <!-- Change columns as your catalog grows -->
+  <div class="grid" style="gap:16px; grid-template-columns: 1fr;">
+    <!-- TIP: For more content, switch to 2 or 3 columns:
+         style="gap:16px; grid-template-columns: repeat(2, 1fr);"
+         or repeat(3, 1fr); -->
 
     <!-- Grade 3 -->
     <div class="card">
       <h3 style="margin-top:0;">Grade 3</h3>
+
+      <h4>Term 1 — Europe</h4>
       <ul>
-        <li><a href="lessons/grade3-norse.html">Norse Navigation (Term 1 • Week 3 • Day 2)</a></li>
+        <li><a href="lessons/grade3-norse.html">Norse Navigation (Week 3 • Day 2)</a></li>
+        <li><em>More coming soon…</em></li>
+      </ul>
+
+      <h4>Term 2 — Africa</h4>
+      <ul>
+        <li><em>Coming soon…</em></li>
+      </ul>
+
+      <h4>Term 3 — Asia</h4>
+      <ul>
+        <li><em>Coming soon…</em></li>
+      </ul>
+
+      <h4>Term 4 — Americas & “Other”</h4>
+      <ul>
+        <li><em>Coming soon…</em></li>
       </ul>
     </div>
 
     <!-- Grade 7 -->
     <div class="card">
       <h3 style="margin-top:0;">Grade 7</h3>
+
+      <h4>Term 1 — Europe</h4>
       <ul>
-        <li><a href="lessons/grade7-taiping.html">The Taiping Rebellion (Term 3 • Week 24 • Day 5)</a></li>
+        <li><em>Coming soon…</em></li>
+      </ul>
+
+      <h4>Term 2 — Africa</h4>
+      <ul>
+        <li><em>Coming soon…</em></li>
+      </ul>
+
+      <h4>Term 3 — Asia</h4>
+      <ul>
+        <li><a href="lessons/grade7-taiping.html">The Taiping Rebellion (Week 24 • Day 5)</a></li>
+      </ul>
+
+      <h4>Term 4 — Americas & “Other”</h4>
+      <ul>
+        <li><em>Coming soon…</em></li>
       </ul>
     </div>
+
+    <!-- Add more grades as you build -->
+    <div class="card">
+      <h3 style="margin-top:0;">Grade 1</h3>
+      <h4>Term 1 — Europe</h4>
+      <ul><li><em>Coming soon…</em></li></ul>
+      <h4>Term 2 — Africa</h4>
+      <ul><li><em>Coming soon…</em></li></ul>
+      <h4>Term 3 — Asia</h4>
+      <ul><li><em>Coming soon…</em></li></ul>
+      <h4>Term 4 — Americas & “Other”</h4>
+      <ul><li><em>Coming soon…</em></li></ul>
+    </div>
+
+    <div class="card">
+      <h3 style="margin-top:0;">Grade 5</h3>
+      <h4>Term 1 — Europe</h4>
+      <ul><li><em>Coming soon…</em></li></ul>
+      <h4>Term 2 — Africa</h4>
+      <ul><li><em>Coming soon…</em></li></ul>
+      <h4>Term 3 — Asia</h4>
+      <ul><li><em>Coming soon…</em></li></ul>
+      <h4>Term 4 — Americas & “Other”</h4>
+      <ul><li><em>Coming soon…</em></li></ul>
+    </div>
+  </div>
+
+  <div class="hr"></div>
+  <p>
+    <a class="btn" href="lessons/lesson-template.html">Create a New Lesson</a>
+  </p>
+</section>
+
 
     <!-- Example placeholders — copy/paste and update as you add lessons -->
     <div class="card">
